--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.tiles_app"
-        minSdk 23
+        applicationId "com.example.trending_app"
+        minSdk 19
         targetSdk 32
         versionCode 1
         versionName "1.0"
