--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
@@ -33,7 +33,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
@@ -41,11 +41,17 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.2"
-    implementation "com.squareup.okhttp3:okhttp-urlconnection:3.12.2"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.12.12"
+    implementation "com.squareup.okhttp3:okhttp-urlconnection:3.12.12"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation ('com.squareup.okhttp3:okhttp'){
+        version {
+            strictly '3.12.12'
+        }
+    }
+
     implementation "com.github.bumptech.glide:glide:4.11.0"
     implementation 'androidx.room:room-runtime:2.4.3'
     annotationProcessor 'androidx.room:room-compiler:2.4.3'
